# fock-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
basis/: Cargo.toml  README.md
basis/src/: contracted_gaussian.rs  electron_tensor.rs  lib.rs  primitives.rs  utils.rs
basis_set/: Cargo.toml  README.md
basis_set/src/: 6-31G.json  atom.rs  basis_sets.rs  lib.rs  periodic_table.rs
basis_set/src/data/: 3-21G.json  6-31++G.json  6-311++G_st_st.json  6-311G.json  6-31G_st.json  6-31G_st_st.json  STO-2G.json  STO-3G.json  STO-6G.json  def2-SV(P).json
bevy-volumetric/: Cargo.toml
bevy-volumetric/assets/shaders/: volumetric.wgsl
bevy-volumetric/src/: hf.rs  main.rs  molecule.rs  render.rs  scf.rs
bevy-volumetric/src/render/: density.rs  mod.rs  molecule.rs  volume.rs
boys/: Cargo.toml  README.md
boys/src/: lib.rs  lut.rs
chemfiles/: Cargo.toml
chemfiles/molecules/: adamantane.xyz  chlorine.xyz  cubane.xyz  diborane.xyz  ethanol.xyz  iron.xyz  iron_block.xyz  norborane.xyz
chemfiles/src/: xyz.rs
cli/: Cargo.toml
pointcloud/: Cargo.toml  README.md
pointcloud/molecules/: benzene.xyz  cyclohexane.xyz  ethane.xyz  ethene.xyz  ethyne.xyz  naphthalene.xyz  water.xyz
pointcloud/src/: main.rs  molecules.rs
scf/: Cargo.toml  README.md
scf/src/: electron_tensor.rs  lib.rs  molecular_orbitals.rs  molecular_wave_function.rs  utils.rs
scf_cylce/: Cargo.toml
scf_cylce/src/: lib.rs  molecular_wave_function.rs
volumetric/: Cargo.toml  compile_shaders.bat
volumetric/src/: main.rs
volumetric/src/shaders/: fragment.frag  fragment.wgsl  vertex.vert  vertex.wgsl
