[package]
name = "basis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["serde_derive"] }
serde_json = "1.0.73"
nalgebra = "0.29.0"
boys = { path = "../boys" }
smallvec = "1.8.0"
rayon = "1.5.1"
log = "0.4.14"