[package]
name = "basis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["serde_derive"] }
indicatif = { version = "0.17.4", features = ["rayon"] }
boys = { path = "../boys" }
serde_json = "1.0.73"
rustc-hash = "1.1.0"
nalgebra = "0.30.1"
smallvec = "1.8.0"
rayon = "1.5.1"
log = "0.4.14"
