[package]
name = "bevy-volumetric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemfiles = { path = "../chemfiles" }
basis_set = { path = "../basis_set" }
futures-lite = "1.13"
scf = { path = "../scf" }
nalgebra = "0.30.1"
bevy = "0.11"
