[package]
name = "pointcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.32.0"
rand = "0.8.4"
rand_xorshift = "0.3.0"
nalgebra = {version = "0.29.0", features = ["rand"]}
basis_set = { path = "../basis_set"}
scf = { path = "../scf" }
