[package]
name = "scf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basis_set = { path = "../basis_set" }
basis = { path = "../basis" }
boys = { path = "../boys" }
itertools = "0.10.5"
nalgebra = "0.30.1"
log = "0.4.14"