[package]
name = "volumetric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.13.1", features = ["spirv"] }
chemfiles = { path = "../chemfiles" }
basis_set = { path = "../basis_set" }
nalgebra = "0.30.1"
scf = { path = "../scf" }
pretty_env_logger = "0.4.0"
winit = "0.27.3"
dolly = "0.3.1"
rayon = "1.5.3"
log = "0.4.17"

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.bytemuck]
version = "1.12.1"
features = ["derive"]
