[package]
name = "volumetric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0-rc.2", features = ["derive"]}
chemfiles = { path = "../chemfiles" }
basis_set = { path = "../basis_set" }
pretty_env_logger = "0.4.0"
scf = { path = "../scf" }
nalgebra = "0.30.1"
winit = "0.27.3"
dolly = "0.3.1"
rayon = "1.5.3"
wgpu = "0.13.1"
log = "0.4.17"

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.bytemuck]
version = "1.12.1"
features = ["derive"]
